--- a/app/config/routing.yml
+++ b/app/config/routing.yml
@@ -1,3 +1,8 @@
+venue:
+    resource: "@VenueBundle/Controller/"
+    type:     annotation
+    prefix:   /
+
 news:
     resource: "@NewsBundle/Controller/"
     type:     annotation
