--- a/app/config/security.yml
+++ b/app/config/security.yml
@@ -1,18 +1,36 @@
 # To get started with security, check out the documentation:
 # http://symfony.com/doc/current/book/security.html
 security:
-
+    role_hierarchy:
+        ROLE_ADMIN: ROLE_USER
+        ROLE_SUPER_ADMIN: [ROLE_ADMIN, ROLE_ALLOWED_TO_SWITCH]
     # http://symfony.com/doc/current/book/security.html#where-do-users-come-from-user-providers
     providers:
         in_memory:
-            memory: ~
+            memory: 
+                users:
+                    user:
+                        password: userpass
+                        roles: 'ROLE_USER'
+                    admin:
+                        password: admin
+                        roles: 'ROLE_ADMIN'
 
+    encoders:
+        Symfony\Component\Security\Core\User\User: plaintext
+    
+    access_control:
+        - { path: ^/admin, roles: ROLE_ADMIN }
+            
     firewalls:
         secured_area:
             pattern: ^/
             anonymous: ~
-            http_basic:
-            
+            form_login:
+                login_path: /alogin
+                check_path: /login_check
+            logout: ~
+        
         dev:
             pattern: ^/(_(profiler|wdt)|css|images|js)/
             security: false
