--- a/app/config/config.yml
+++ b/app/config/config.yml
@@ -61,6 +61,16 @@ doctrine:
         naming_strategy: doctrine.orm.naming_strategy.underscore
         auto_mapping: true
 
+doctrine_mongodb:
+    connections:
+        default:
+            server: mongodb://localhost:27017
+            options: {}
+    default_database: parse
+    document_managers:
+        default:
+            auto_mapping: true            
+            
 # Swiftmailer Configuration
 swiftmailer:
     transport: "%mailer_transport%"
