--- a/app/config/security.yml
+++ b/app/config/security.yml
@@ -5,19 +5,14 @@ security:
         ROLE_ADMIN: ROLE_USER
         ROLE_SUPER_ADMIN: [ROLE_ADMIN, ROLE_ALLOWED_TO_SWITCH]
     # http://symfony.com/doc/current/book/security.html#where-do-users-come-from-user-providers
-    providers:
-        in_memory:
-            memory: 
-                users:
-                    user:
-                        password: userpass
-                        roles: 'ROLE_USER'
-                    admin:
-                        password: admin
-                        roles: 'ROLE_ADMIN'
-
+    
     encoders:
         Symfony\Component\Security\Core\User\User: plaintext
+        VenueBundle\Document\Platforms: plaintext
+    
+    providers:
+        my_mongo_provider:
+            mongodb: {class: VenueBundle\Document\Platforms, property: username }
     
     access_control:
         - { path: ^/admin, roles: ROLE_ADMIN }
@@ -25,6 +20,7 @@ security:
     firewalls:
         secured_area:
             pattern: ^/
+            provider: my_mongo_provider
             anonymous: ~
             form_login:
                 login_path: /alogin
