--- a/composer.json
+++ b/composer.json
@@ -16,6 +16,8 @@
         "php": ">=5.4.0",
 	"ext-curl": "*",
 	"ext-json": "*",
+	"doctrine/mongodb-odm": "~1.0",
+        "doctrine/mongodb-odm-bundle": "~3.0",
         "symfony/symfony": "2.8.*",
         "doctrine/orm": "^2.4.8",
         "doctrine/doctrine-bundle": "~1.4",
@@ -23,7 +25,8 @@
         "symfony/monolog-bundle": "~2.4",
         "sensio/distribution-bundle": "~5.0",
         "sensio/framework-extra-bundle": "^3.0.2",
-        "incenteev/composer-parameter-handler": "~2.0"
+        "incenteev/composer-parameter-handler": "~2.0",
+        "doctrine/mongodb": "^1.3"
     },
     "require-dev": {
         "sensio/generator-bundle": "~3.0",
